# researchaiplusweekly

./: .gitignore  Makefile  README.md  pyproject.toml  render.yaml
.cursor/: create-prd.mdc  generate-tasks.mdc  process-task-list.mdc
data/: urls.txt
src/newsletter/: __init__.py  cli.py  config.py
src/newsletter/api/: __init__.py  app.py  celery_app.py  celery_tasks.py  dependencies.py  models.py  pipeline_executor.py  progress.py  service.py  task_dispatcher.py  task_store.py
src/newsletter/api/static/: app.js  index.html  styles.css
src/newsletter/classification/: subtopic_classifier.py  topic_classifier.py
src/newsletter/io/: models.py  url_loader.py
src/newsletter/metadata/: extractor.py
src/newsletter/pipeline/: builder.py  markdown_renderer.py
src/newsletter/services/: jina_client.py  openrouter_client.py
tasks/: Task-PRD-supplement.md  prd-newsletter.md  tasks-prd-newsletter.md
tests/: test_cli.py  test_jina_client.py  test_markdown_renderer.py  test_metadata_extractor.py  test_pipeline_builder.py  test_subtopic_classifier.py  test_topic_classifier.py  test_url_loader.py
tests/api/: test_app.py  test_pipeline_api.py
