[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "newsletter-workflow"
version = "0.1.0"
description = "Automation workflow for generating AI-assisted newsletters."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Liz" }
]
dependencies = [
  "requests>=2.31,<3",
  "httpx>=0.27,<0.28",
  "pydantic>=2.7,<3",
  "click>=8.1,<9",
  "python-dotenv>=1.0,<2",
  "pydantic-settings>=2.2,<3",
  "fastapi>=0.111,<1",
  "python-multipart>=0.0.9,<0.1",
  "celery>=5.3,<6",
  "redis>=5.0,<6",
  "sse-starlette>=2.1,<3",
  "uvicorn>=0.30,<1"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8.3"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
exclude = [
  "tests/fixtures"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
  "tests"
]
